--- a/homeworks/Igor.Skyba_IgorSkyba/homework_5/index.html
+++ b/homeworks/Igor.Skyba_IgorSkyba/homework_5/index.html
@@ -64,9 +64,13 @@
     </div>
 </div>
 <script type="text/javascript">
+    jsonObject = new JsonObject();
     jsonObject.init();
+    popupObject = new PopupObject();
     popupObject.init();
+    content = new Content();
     content.init();
+    themeObject = new ThemeObject();
     themeObject.init();
 </script>
 </body>
